kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-banano-cc
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: chat-banano-cc
  template:
    metadata:
      labels:
        app: chat-banano-cc
    spec:
      containers:
      - name: chat-banano-cc
        image: replaceme
        ports:
        - containerPort: 8008
          name: api
        command: ["/bin/bash", "-c"]
        args: ["python server.py --host 0.0.0.0"]
